# nsu-cpp

./: .gitignore  Makefile
task1/: .gitignore  CMakeLists.txt  Makefile  main.cpp  meson.build  treap.cpp  treap.hpp  trie.hpp
task1+2/: CMakeLists.txt  trie.hpp
task1+2/tests/: tester.cpp
task1+3/: trie.hpp
task1+3/tests/: tester.cpp
task1/tests/: tester.cpp
task10/: limiter.hpp
task10/tests/: tester.cpp
task11/: primer.hpp
task11/tests/: tester.cpp
task2/: CMakeLists.txt  Makefile  lines.cpp  lines.hpp  main.cpp
task2/tests/: tester.cpp
task3/: main.cc
task4/: main.cc
task5/: CMakeLists.txt  scoped_ptr.hpp
task5/tests/: tester.cpp
task6/: CMakeLists.txt  matrix.hpp
task6/tests/: tester.cpp
task7/: CMakeLists.txt  Makefile  expr.hpp  input.txt  test.cpp
task7/src/: main.cpp
task7/src/exec/: lang.hpp
task7/src/lexer/: ilexer.hpp  lexer.cpp  lexer.hpp
task7/src/parser/: iparser.hpp  parser.cpp  parser.hpp
task7/tests/: tester.cpp
task7/tests/inputs/: test1.txt
task8/: .clang-format  CMakeLists.txt  Makefile
task8/src/: file.hpp  io.hpp  main.cpp  reader.hpp  readerwriter.hpp  string.hpp  writer.hpp
task8/tests/: tester.cpp
task8/tests/inputs/: test1.txt  test2.txt  test3.txt
